<resources>
    <string name="app_name">battleship</string>
    <string name="player_vs_computer">Player VS Phone</string>
    <string name="player_vs_player">Player VS Player</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="press_twice"> Press twice to exit</string>
    <string name="swap_players_message">Please swap players.</string>
    <string name="swap_message_text">Swap Players.</string>
    <string name="attack_board">Attack Board</string>
    <string name="my_board">My Board</string>
    <string name="playing_as">Playing as: </string>
    <string name="exit">Exit</string>
    <string name="points_string">Points</string>
    <string name="stats_plays_string">Plays</string>
    <string name="stats_difficulty">Difficulty</string>
    <string name="stas_ships_left_string">Ships Left</string>
    <string name="stats_hit_rate">Hit Rate</string>
    <string name="stats_time">Time</string>
    <string name="title_activity_leaderboard">leaderboard</string>
    <string name="tab_text_1">Easy</string>
    <string name="tab_text_2">Medium</string>
    <string name="tab_text_3">Hard</string>
    <string name="easy_button">EASY</string>
    <string name="medium_button">MEDIUM</string>
    <string name="hard_button">HARD</string>
    <string name="share">Share</string>
    <string name="your_plays">Button</string>
    <string name="even_the_developer_can_t_beat_this">Even the developer can\'t beat this</string>
</resources>