<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <GridLayout
        android:id="@+id/play_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="10"
        android:rowCount="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent">

    </GridLayout>

    <GridLayout
        android:id="@+id/my_board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:columnCount="10"
        android:rowCount="10"
        app:layout_constraintBottom_toTopOf="@+id/play_board"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

    </GridLayout>

    <TextView
        android:id="@+id/my_board_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_board"
        app:layout_constraintBottom_toTopOf="@+id/my_board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/attack_board_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack_board"
        app:layout_constraintBottom_toTopOf="@+id/play_board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/swap_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swap_message_text"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>